fixed horizontal overflow on mobile device and placed first item at the center.

--- a/landing/src/components/Benefit/Benefit.scss
+++ b/landing/src/components/Benefit/Benefit.scss
@@ -162,7 +162,7 @@
 	}
 }
 
-@media (min-width: 426px) and (max-width: 1024px) {
+@media (min-width: 641px) and (max-width: 1024px) {
 
 	.line-group,
 	.symbol-container {
@@ -256,7 +256,7 @@
 	}
 }
 
-@media (max-width: 425px) {
+@media (max-width: 640px) {
 
 	.line-group,
 	.symbol-container {
